--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>HTML Test</title>
 </head>
 <body>
+    <h1>Hello World</h1>
     <button onclick="onClick();"><h1>Click</h1></button>
     
     <script>
