--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <h1>Hello World</h1>
     <button onclick="onClick();"><h1>Click</h1></button>
     
-        <img src="./test0.jpg">
+        <img src="https://media.giphy.com/media/GnqgAJvlpkK76/giphy.gif">
     
     <script>
         function onClick() {
